--- a/Resources/Views/GeneralResource/GeneralText.resx
+++ b/Resources/Views/GeneralResource/GeneralText.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ByeText" xml:space="preserve">
+    <value>Chao</value>
+  </data>
   <data name="HelloWord" xml:space="preserve">
     <value>Hello</value>
   </data>
