--- a/Resources/Views/GeneralResource/GeneralText.resx
+++ b/Resources/Views/GeneralResource/GeneralText.resx
@@ -117,10 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddText" xml:space="preserve">
+    <value>Add</value>
+  </data>
   <data name="ByeText" xml:space="preserve">
     <value>Chao</value>
   </data>
-  <data name="HelloWord" xml:space="preserve">
+  <data name="DeleteText" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="ExampleText" xml:space="preserve">
+    <value>Example</value>
+  </data>
+  <data name="HelloWordText" xml:space="preserve">
     <value>Hello</value>
   </data>
 </root>
